--- a/TuSDKDemo/res/layout/custom_textedit_fragment_layout.xml
+++ b/TuSDKDemo/res/layout/custom_textedit_fragment_layout.xml
@@ -12,6 +12,7 @@
         android:background="@color/lsq_background_editor" >
 
         <ImageView
+            android:id="@+id/lsq_imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
