--- a/TuSDKDemo/res/layout/custom_textedit_fragment_layout.xml
+++ b/TuSDKDemo/res/layout/custom_textedit_fragment_layout.xml
@@ -5,6 +5,7 @@
                 android:background="@color/lsq_background_editor" >
 
     <RelativeLayout
+
         android:id="@+id/lsq_imageWrapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,6 +13,7 @@
         android:background="@color/lsq_background_editor" >
 
         <ImageView
+            android:layout_centerInParent="true"
             android:id="@+id/lsq_imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
