--- a/TuSDKDemo/res/layout/custom_sticker_fragment_layout.xml
+++ b/TuSDKDemo/res/layout/custom_sticker_fragment_layout.xml
@@ -3,134 +3,75 @@
     android:layout_height="match_parent"
     android:background="@color/lsq_background_editor" >
 
-    <HorizontalScrollView
-        android:id="@+id/lsq_bar_bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        android:background="@color/lsq_background_editor_bottom_bar">
-        <LinearLayout
-            android:id="@+id/lsq_actions_wrapview"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true"
-            android:background="@color/lsq_background_editor_bottom_bar"/>
-    </HorizontalScrollView>
-    <LinearLayout
-        android:id="@+id/lsq_actions_wrapview2"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:background="@color/lsq_background_editor_bottom_bar">
-
-        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
-            android:layout_weight="1"
-            android:id="@+id/lsq_filterButton"
-            style="@style/lsq_edit_entryOptionButton"
-            android:layout_width="match_parent"
-            android:drawableTop="@drawable/lsq_style_default_edit_icon_filter"
-            android:text="@string/lsq_edit_entry_filter" />
-
-        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
-            android:layout_weight="1"
-            android:id="@+id/lsq_skinButton"
-            style="@style/lsq_edit_entryOptionButton"
-            android:layout_width="match_parent"
-            android:drawableTop="@drawable/lsq_style_default_edit_icon_skin"
-            android:text="@string/lsq_edit_skin_title" />
-
-        <ImageView
-            android:id="@+id/lsq_shareButton"
-            android:padding="10dp"
-            android:src="@drawable/ic_launcher"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
-            android:layout_weight="1"
-            android:id="@+id/lsq_stickerButton"
-            style="@style/lsq_edit_entryOptionButton"
-            android:layout_width="match_parent"
-            android:drawableTop="@drawable/lsq_style_default_edit_icon_sticker"
-            android:text="@string/lsq_edit_entry_sticker" />
-
-        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
-            android:layout_weight="1"
-            android:id="@+id/lsq_fontButton"
-            style="@style/lsq_edit_entryOptionButton"
-            android:layout_width="match_parent"
-            android:drawableTop="@drawable/lsq_style_default_edit_icon_edit"
-            android:text="@string/lsq_edit_entry_font" />
-
-
-    </LinearLayout>
 
     <ImageView
         android:id="@+id/lsq_imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/lsq_stepwrap"
+        android:layout_above="@+id/lsq_sticker_bar"
+        android:background="@color/lsq_background_editor"
         android:scaleType="fitCenter" />
 
-    <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
-        android:id="@+id/lsq_cancelButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:scaleType="centerInside"
-        android:background="@drawable/lsq_style_default_edit_button_cancel_bg" />
+    <org.lasque.tusdkdemo.custom.CustomStickerBarView
+        android:id="@+id/lsq_stickerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/lsq_sticker_bar" />
 
-    <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
-        android:id="@+id/lsq_doneButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:scaleType="centerInside"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/lsq_style_default_edit_button_confirm_bg" />
+    <org.lasque.tusdk.core.view.widget.TuMaskRegionView
+
+        android:id="@+id/lsq_cutRegionView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/lsq_sticker_bar"/>
+
+    <org.lasque.tusdkdemo.custom.CustomStickerBarView
+        android:id="@+id/lsq_sticker_bar"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_above="@+id/lsq_bar_bottomBar"
+        />
 
     <LinearLayout
-        android:id="@+id/lsq_stepwrap"
+        android:id="@+id/lsq_bar_bottomBar"
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:layout_above="@+id/lsq_actions_wrapview2"
+        android:layout_alignParentBottom="true"
+        android:background="@color/lsq_background_editor_bottom_bar"
         android:orientation="horizontal" >
 
-        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
-            android:id="@+id/lsq_step_prev"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:text="@string/lsq_edit_step_prev"
-            android:drawableTop="@drawable/lsq_style_default_edit_step_prev"
-            android:paddingLeft="16dp" />
-
-        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
-            android:id="@+id/lsq_step_next"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:text="@string/lsq_edit_step_next"
-            android:drawableTop="@drawable/lsq_style_default_edit_step_next"
-            android:paddingLeft="32dp" />
-
-        <View
+        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:id="@+id/lsq_bar_cancelButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:scaleType="center"
+            android:src="@drawable/lsq_style_default_edit_button_cancel" />
 
-        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
-            android:id="@+id/lsq_auto_adjust"
-            android:layout_width="wrap_content"
+        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:visibility="gone"
+            android:id="@+id/lsq_bar_listButton"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:text="@string/lsq_edit_auto_adjust"
-            android:drawableTop="@drawable/lsq_style_default_edit_auto_adjust"
-            android:paddingRight="16dp" />
+            android:layout_weight="1"
+            android:scaleType="center"
+            android:src="@drawable/lsq_style_default_edit_button_sticker_list" />
+
+        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:id="@+id/lsq_bar_onlineButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:scaleType="center"
+            android:src="@drawable/lsq_style_default_edit_button_sticker_online" />
+
+        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:id="@+id/lsq_bar_completeButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:scaleType="center"
+            android:src="@drawable/lsq_style_default_edit_button_completed" />
     </LinearLayout>
 
 </RelativeLayout>
