--- a/TuSDK/res/drawable/tusdk_button_edit_sticker_remove.xml
+++ b/TuSDK/res/drawable/tusdk_button_edit_sticker_remove.xml
@@ -3,9 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="oval">
 
+    <!--<size-->
+        <!--android:width="32dp"-->
+        <!--android:height="32dp" />-->
+
 	<solid android:color="@color/lsq_color_orange"/>
 	
 	<!-- android:radius 弧形的半径 -->
 	<corners android:radius="16dip"/>
+
+
+
+
 	
 </shape>
