--- a/app/res/layout/custom_camera_fragment_layout.xml
+++ b/app/res/layout/custom_camera_fragment_layout.xml
@@ -21,56 +21,46 @@
         android:background="@drawable/tusdk_component_camera_configbar_bg" >
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:layout_weight="1"
             android:id="@+id/lsq_closeButton"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:scaleType="center"
+            android:visibility="gone"
             android:src="@drawable/lsq_style_default_camera_button_close" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:layout_weight="1"
             android:id="@+id/lsq_ratioButton"
-            android:layout_width="44dp"
+            android:layout_width="match_parent"
             android:layout_height="44dp"
             android:scaleType="center"
             android:src="@drawable/lsq_style_default_camera_ratio_orgin" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:layout_weight="1"
             android:id="@+id/lsq_guideLineButton"
-            android:layout_width="44dp"
+            android:layout_width="match_parent"
             android:layout_height="44dp"
             android:scaleType="center"
             android:src="@drawable/lsq_style_default_camera_guideline" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:layout_weight="1"
             android:id="@+id/lsq_flashButton"
-            android:layout_width="44dp"
+            android:layout_width="match_parent"
             android:layout_height="44dp"
             android:scaleType="center"
             android:src="@drawable/lsq_style_default_camera_flash_auto" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
+            android:layout_weight="1"
             android:id="@+id/lsq_switchButton"
-            android:layout_width="44dp"
+            android:layout_width="match_parent"
             android:layout_height="44dp"
             android:scaleType="center"
             android:src="@drawable/lsq_style_default_camera_button_switch" />
