--- a/app/res/layout/view_input_dialog.xml
+++ b/app/res/layout/view_input_dialog.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black_alpha_95">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/root_bubble">
+
+    <EditText
+
+        android:background="@color/white_alpha_50"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/et_bubble_input"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:textSize="16sp"
+        android:hint="@string/publish_comment"
+        android:textColor="@color/white"
+        android:inputType="text|textMultiLine"
+        android:imeOptions="actionDone"
+        android:gravity="center"
+        android:singleLine="false"
+        />
 
     <TextView
+        android:layout_alignTop="@id/et_bubble_input"
+        android:visibility="gone"
         android:id="@+id/tv_show_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,9 +33,11 @@
         android:gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        />
+    />
 
     <TextView
+        android:visibility="gone"
+        android:layout_alignTop="@id/et_bubble_input"
         android:id="@+id/tv_action_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,21 +50,6 @@
         android:text="@string/complete"
         android:gravity="center"
         android:layout_alignParentRight="true"
-        />
+    />
 
-    <EditText
-        android:id="@+id/et_bubble_input"
-        android:layout_below="@id/tv_action_done"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:background="@null"
-        android:textSize="15sp"
-        android:hint="@string/publish_comment"
-        android:textColor="@color/white"
-        android:inputType="text|textMultiLine"
-        android:imeOptions="actionDone"
-        android:padding="10dp"
-        android:gravity="center"
-        android:singleLine="false"
-        />
 </RelativeLayout>
