--- a/app/res/layout/view_input_dialog.xml
+++ b/app/res/layout/view_input_dialog.xml
@@ -6,8 +6,7 @@
     android:id="@+id/root_bubble">
 
     <EditText
-
-        android:background="@color/white_alpha_50"
+        android:background="@color/white"
         android:layout_alignParentBottom="true"
         android:id="@+id/et_bubble_input"
         android:layout_width="match_parent"
